chandeliers-lus/tests/fail/ui/causality/redef-var-ov.stderr
error: Variable a is declared twice in node foo
 --> tests/fail/ui/causality/redef-var-ov.rs:3:9
  |
3 |     var a : int;
  |         ^
